--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <html>
     <body>
-        <div>
-            <li>bricks</li>
-            <li>quickcrete</li>
-            <li>sand</li>
-        </div>
+        <module-one>
+            <ul>
+                <li>item 1</li>
+                <li>item 2</li>
+                <li>item 3</li>
+                <li>item 4</li>
+                <li>item 5</li>
+            </ul>
+        </module-one>
     </body>
 </html>
